--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+a{
+  text-decoration: none;
+  color: black;
+  /* border: 1px solid black; */
+  /* padding: 5px 10px; */
+}
